# openkraken

./: CMakeLists.txt  README.md  test.py
math/: Determinant.cpp  Determinant.hpp  GaussianElimination.cpp  GaussianElimination.hpp  InverseMatrix.cpp  InverseMatrix.hpp  MathException.cpp  MathException.hpp  MathTools.hpp  Matrix.cpp  Matrix.hpp  Matrix3x3.cpp  Matrix3x3.hpp  Matrix4x4.cpp  Matrix4x4.hpp  RQDecomposition.cpp  RQDecomposition.hpp  SVD.cpp  SVD.hpp  Solver.cpp  Solver.hpp  Vector.cpp  Vector.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
vision/: EpipolarGeometry.cpp  EpipolarGeometry.hpp  Homography.cpp  Homography.hpp  ProjectiveCamera.cpp  ProjectiveCamera.hpp  VisionException.cpp  VisionException.hpp
